fix: upd loader z-index

--- a/packages/client/src/ui/zombieLoader/style.module.scss
+++ b/packages/client/src/ui/zombieLoader/style.module.scss
@@ -6,6 +6,7 @@
   align-items: center;
   right: 20px;
   bottom: 20px;
+  z-index: 9999;
 }
 
 .img {
